# believer

./: .gitignore  Cargo.toml  README.md  notes.md  notes.org
src/: channel.rs  decoder.rs  gf2.rs  gf4_stabilizers.rs  lib.rs  main.rs  parity_check_matrix.rs  paulis.rs  random_number_generators.rs  simulation.rs  sparse_matrix.rs
src/checks/: check_view.rs  checks.rs  mod.rs  parity_check_matrix.rs
src/classical/: channel.rs  gf2.rs  mod.rs
src/classical/decoders/: erasure.rs  mod.rs  n_events_simulator.rs  n_iterations_simulator.rs  simulation_results.rs
src/classical/parity_check_matrix/: check.rs  check_view.rs  checks_iter.rs  concatener.rs  edges_iter.rs  mod.rs  ranker.rs  transposer.rs
src/code_generation/: hirarchical_code.rs  mod.rs
src/decoders/: belief_propagation.rs  css_erasure.rs  erasure.rs  mod.rs  n_events_simulator.rs  n_iterations_simulator.rs  quantum_erasure.rs  simulation_results.rs
src/generators/: _random_check_generator.rs  best_code_finder.rs  bit_and_check_degrees.rs  hierarchical_code.rs  increasing_range_code.rs  mod.rs  random_check_generator.rs  regular_ldpc.rs
src/generators/hierarchical_codes/: code_constructor.rs  mod.rs
src/generators/random_check/: adjacency.rs  generator.rs  mod.rs
src/generators/random_checks/: generator.rs  mod.rs
src/parity_check_matrix/: check.rs  check_view.rs  checks_iter.rs  concat_tool.rs  concatener.rs  edges_iter.rs  hyper_graph.rs  mod.rs  ranker.rs  tensor_product.rs  transposer.rs
