[package]
name = "believer"
version = "0.3.0"
authors = ["Maxime Tremblay"]
edition = "2018"
description = "The belief propagation algorithm for classical and quantum ldpc error correcting codes"
license = "MIT OR Apache-2.0"

[dependencies]
num = "0.2"
rand = "0.7"
rand_chacha = "0.2"
itertools = "0.8"
rayon = "1.2"
qecsim = { path = "../local_ldpc/qecsim" }
